# mlpipeline-demo

./: .gitignore  MLProject  Taskfile.yml  config.yaml  main.py  pyproject.toml
components/clean/: MLProject  run.py
components/download/: MLProject  run.py
components/train/: MLProject  run.py
data/: penguins_classification.csv
mlpipeline/: clean.py  download.py  experiment.py
