[tool.poetry]
name = "mlpipe"
version = "0.1.0"
description = ""
authors = ["Alexander Bondarenko <alexander.bondarenko@shippeo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mlflow = "^2.0.1"
hydra-core = "^1.2.0"
pandas = "^1.5.1"
wandb = "^0.13.5"
omegaconf = "^2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
